syntax = "proto3";
package kepler.staking.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

option go_package = "kepler/x/staking/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "kepler/x/staking/Params";
  option (gogoproto.equal) = true;

  // unbonding_time is the time duration of unbonding.
  google.protobuf.Duration unbonding_time = 1 [
    (gogoproto.nullable)    = false,
    (amino.dont_omitempty)  = true,
    (gogoproto.stdduration) = true
  ];

  // max_validators is the maximum number of validators.
  uint32 max_validators = 2;

  // power_reduction is amount of staking tokens required for 1 unit of consensus-engine power
  string power_reduction = 3 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
}